# 3DV12

./: .gitignore  3DV12.ini.default  CMakeLists.txt  README.md
.github/workflows/: build.yml
scripts/: gen_def.py
src/: config.cpp  config.h  d3d12.def  dllmain.cpp  dxbc_parser.cpp  dxbc_parser.h  log.cpp  log.h  shader_patcher.cpp  shader_patcher.h  stereo_engine.cpp  stereo_engine.h  version.h  version.rc.in  wrapped_command_list.cpp  wrapped_command_list.h  wrapped_device.cpp  wrapped_device.h
